--- a/package.json
+++ b/package.json
@@ -46,13 +46,17 @@
     "lib": "lib"
   },
   "dependencies": {
-    "sequelize": "^3.13.0"
+    "feathers-errors": "^0.2.5",
+    "feathers-query-filters": "^1.1.1",
+    "sequelize": "^3.14.1",
+    "uberproto": "^1.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.1.2",
     "babel-core": "^6.1.2",
     "babel-preset-es2015": "^6.1.2",
     "feathers": "^1.2.0",
+    "feathers-service-tests": "^0.3.0",
     "jshint": "^2.8.0",
     "mocha": "^2.3.3",
     "sqlite3": "^3.1.1"
