--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "babel-cli": "^6.1.2",
     "babel-core": "^6.1.2",
+    "babel-plugin-transform-object-assign": "^6.1.18",
     "babel-preset-es2015": "^6.1.2",
     "feathers": "^1.2.0",
     "feathers-service-tests": "^0.3.0",
