--- a/package.json
+++ b/package.json
@@ -45,19 +45,29 @@
   "directories": {
     "lib": "lib"
   },
+  "babel": {
+    "plugins": [
+      "add-module-exports"
+    ],
+    "presets": [
+      "es2015"
+    ]
+  },
   "dependencies": {
+    "babel-polyfill": "^6.3.14",
     "feathers-errors": "^0.2.5",
     "feathers-query-filters": "^1.1.1",
-    "sequelize": "^3.14.1",
     "uberproto": "^1.1.2"
   },
   "devDependencies": {
+    "sequelize": "^3.14.1",
     "babel-cli": "^6.1.2",
     "babel-core": "^6.1.2",
-    "babel-plugin-transform-object-assign": "^6.1.18",
+    "babel-plugin-add-module-exports": "^0.1.1",
     "babel-preset-es2015": "^6.1.2",
+    "body-parser": "^1.14.1",
     "feathers": "^1.2.0",
-    "feathers-service-tests": "^0.3.0",
+    "feathers-service-tests": "^0.5.1",
     "jshint": "^2.8.0",
     "mocha": "^2.3.3",
     "sqlite3": "^3.1.1"
