--- a/package.json
+++ b/package.json
@@ -45,14 +45,6 @@
   "directories": {
     "lib": "lib"
   },
-  "babel": {
-    "plugins": [
-      "add-module-exports"
-    ],
-    "presets": [
-      "es2015"
-    ]
-  },
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "feathers-errors": "^1.1.5",
@@ -63,6 +55,7 @@
     "babel-cli": "^6.1.2",
     "babel-core": "^6.1.2",
     "babel-plugin-add-module-exports": "^0.1.1",
+    "babel-plugin-transform-object-assign": "^6.1.18",
     "babel-preset-es2015": "^6.1.2",
     "body-parser": "^1.14.1",
     "chai": "^3.4.1",
