--- a/package.json
+++ b/package.json
@@ -16,12 +16,7 @@
     "pg",
     "mssql"
   ],
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/feathersjs/feathers-sequelize/blob/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/feathersjs/feathers-sequelize.git"
