--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "babel-preset-es2015": "^6.1.2",
     "body-parser": "^1.14.1",
     "chai": "^3.4.1",
-    "feathers": "^1.3.0",
+    "feathers": "^2.0.0-pre.4",
+    "feathers-rest": "^1.1.1",
     "feathers-service-tests": "^0.5.2",
     "jshint": "^2.8.0",
     "mocha": "^2.3.3",
