--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "watch": "babel --watch -d lib/ src/",
     "jshint": "jshint src/. test/. --config",
     "mocha": "mocha test/ --compilers js:babel-core/register",
-    "test": "npm run jshint && npm run mocha && nsp check"
+    "test": "npm run jshint && npm run mocha"
   },
   "directories": {
     "lib": "lib"
@@ -67,7 +67,6 @@
     "feathers-service-tests": "^0.5.2",
     "jshint": "^2.8.0",
     "mocha": "^2.3.3",
-    "nsp": "^2.3.2",
     "sequelize": "^3.14.1",
     "sqlite3": "^3.1.1"
   }
