--- a/package.json
+++ b/package.json
@@ -42,9 +42,17 @@
     "release:major": "npm version major && npm publish",
     "compile": "rm -rf lib/ && babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
-    "jshint": "jshint src/. test/. --config",
+    "lint": "eslint-if-supported semistandard --fix",
     "mocha": "mocha test/ --compilers js:babel-core/register",
-    "test": "npm run jshint && npm run mocha"
+    "test": "npm run lint && npm run mocha"
+  },
+  "semistandard": {
+    "env": [
+      "mocha"
+    ],
+    "ignore": [
+      "/lib"
+    ]
   },
   "directories": {
     "lib": "lib"
@@ -63,11 +71,12 @@
     "babel-preset-es2015": "^6.1.2",
     "body-parser": "^1.14.1",
     "chai": "^3.4.1",
+    "eslint-if-supported": "^1.0.1",
     "feathers": "^2.0.0",
     "feathers-rest": "^1.3.0",
     "feathers-service-tests": "^0.8.0",
-    "jshint": "^2.8.0",
     "mocha": "^3.0.0",
+    "semistandard": "^9.1.0",
     "sequelize": "^3.23.6",
     "sqlite3": "^3.1.1"
   }
