--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "compile": "rm -rf lib/ && babel -d lib/ src/",
+    "compile": "rimraf lib/ && babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
     "lint": "eslint-if-supported semistandard --fix",
     "mocha": "mocha test/ --compilers js:babel-core/register",
@@ -76,6 +76,7 @@
     "feathers-rest": "^1.3.0",
     "feathers-service-tests": "^0.8.0",
     "mocha": "^3.0.0",
+    "rimraf": "^2.5.4",
     "semistandard": "^9.1.0",
     "sequelize": "^3.23.6",
     "sqlite3": "^3.1.1"
