--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "compile": "rimraf lib/ && babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
     "lint": "eslint-if-supported semistandard --fix",
-    "mocha": "mocha test/ --compilers js:babel-core/register",
-    "test": "npm run lint && npm run mocha"
+    "mocha": "mocha --opts mocha.opts",
+    "test": "npm run lint && npm run coverage",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --opts mocha.opts"
   },
   "semistandard": {
     "env": [
@@ -75,6 +76,7 @@
     "feathers": "^2.0.0",
     "feathers-rest": "^1.3.0",
     "feathers-service-tests": "^0.8.0",
+    "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.0.0",
     "rimraf": "^2.5.4",
     "semistandard": "^9.1.0",
