Increase Mocha time for DB connection

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "compile": "rimraf lib/ && babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
     "lint": "eslint-if-supported semistandard --fix",
-    "mocha": "mocha --opts mocha.opts",
+    "mocha": "mocha --opts mocha.opts --timeout 5000",
     "test": "npm run lint && npm run coverage",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --opts mocha.opts"
   },
