--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lib": "lib"
   },
   "dependencies": {
+    "feathers-commons": "^0.8.4",
     "feathers-errors": "^2.0.1",
     "feathers-query-filters": "^2.0.0",
     "lodash.omit": "^4.3.0",
