--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "feathers-service-tests": "^0.10.0",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.0.0",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
     "rimraf": "^2.5.4",
     "semistandard": "^11.0.0",
     "sqlite3": "^3.1.7"
