Added mysql tests. Changed the hooks tests to use the correct db.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ node_js:
   - '4'
 env:
   - DB=postgres
+  - DB=mysql
+  - DB=sqlite
 sudo: false
 before_script:
   - npm install -g codeclimate-test-reporter
