--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ sudo: false
 before_script:
   - npm install -g codeclimate-test-reporter
   - psql -c 'create database sequelize;' -U postgres
+  - mysql -e 'CREATE DATABASE sequelize;'
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
 services:
