--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,15 @@ node_js:
   - node
   - '6'
   - '4'
+env:
+  - DB=postgres
+  - DB=mysql
+  - DB=sqlite
 sudo: false
 before_script:
   - npm install -g codeclimate-test-reporter
   - psql -c 'create database sequelize;' -U postgres
+  - mysql -e 'CREATE DATABASE sequelize;'
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
 services:
