--- a/package.json
+++ b/package.json
@@ -57,18 +57,17 @@
     "lib": "lib"
   },
   "dependencies": {
-    "feathers-commons": "^0.8.4",
-    "feathers-errors": "^2.0.1",
-    "feathers-query-filters": "^2.0.0",
+    "@feathersjs/commons": "^1.3.0",
+    "@feathersjs/errors": "^3.2.0",
     "lodash.omit": "^4.3.0",
     "sequelize": "^4.25.1",
     "uberproto": "^1.1.2"
   },
   "devDependencies": {
+    "@feathersjs/express": "^1.1.2",
+    "@feathersjs/feathers": "^3.0.1",
     "body-parser": "^1.14.1",
     "chai": "^4.0.0",
-    "feathers": "^2.0.0",
-    "feathers-rest": "^1.3.0",
     "feathers-service-tests": "^0.10.0",
     "istanbul": "^1.1.0-alpha.1",
     "mocha": "^4.0.0",
