--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@feathersjs/errors": "^3.3.5"
   },
   "devDependencies": {
+    "@feathersjs/adapter-tests": "^1.0.1",
     "@feathersjs/express": "^1.3.0",
     "@feathersjs/feathers": "^3.3.0",
     "body-parser": "^1.18.3",
