--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ env:
 sudo: false
 install: npm install
 before_script:
-  - npm install -g codeclimate-test-reporter
   - psql -c 'create database sequelize;' -U postgres
   - mysql -e 'CREATE DATABASE sequelize;'
 services:
   - postgresql
+  - mysql
