--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - node
+  - '11'
   - '8'
 env:
   - DB=postgres
@@ -9,8 +9,8 @@ env:
 sudo: false
 install: npm install
 before_script:
-  - npm install -g codeclimate-test-reporter
   - psql -c 'create database sequelize;' -U postgres
   - mysql -e 'CREATE DATABASE sequelize;'
 services:
   - postgresql
+  - mysql
