--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "release:major": "npm version major && npm publish",
     "lint": "semistandard --fix",
     "mocha": "mocha --opts mocha.opts --timeout 5000",
-    "test": "npm run lint && npm run coverage",
+    "dtslint": "dtslint types",
+    "test": "npm run lint && npm run dtslint && npm run coverage",
     "test:postgres": "env DB=postgres npm run lint && npm run coverage:postgres",
     "test:mysql": "env DB=mysql npm run lint && npm run coverage:mysql",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --opts mocha.opts",
@@ -57,24 +58,25 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@feathersjs/adapter-commons": "^2.0.0",
+    "@feathersjs/adapter-commons": "^4.0.0-pre.4",
     "@feathersjs/commons": "^4.0.0",
-    "@feathersjs/errors": "^3.3.5"
+    "@feathersjs/errors": "^4.0.0-pre.4"
   },
   "devDependencies": {
-    "@feathersjs/adapter-tests": "^1.0.1",
-    "@feathersjs/express": "^1.3.0",
-    "@feathersjs/feathers": "^3.3.0",
-    "body-parser": "^1.18.3",
+    "@feathersjs/adapter-tests": "^4.0.0-pre.4",
+    "@feathersjs/express": "^4.0.0-pre.4",
+    "@feathersjs/feathers": "^4.0.0-pre.4",
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "dtslint": "^0.8.0",
     "feathers-service-tests": "^0.10.2",
     "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^6.0.0",
-    "mysql2": "^1.6.4",
-    "pg": "^7.7.1",
-    "pg-hstore": "^2.3.2",
+    "mocha": "^6.1.4",
+    "mysql2": "^1.6.5",
+    "pg": "^7.11.0",
+    "pg-hstore": "^2.3.3",
     "semistandard": "^13.0.1",
-    "sequelize": "^5.1.0",
-    "sqlite3": "^4.0.4"
+    "sequelize": "^5.9.4",
+    "sqlite3": "^4.0.9"
   }
 }
