--- a/package.json
+++ b/package.json
@@ -59,25 +59,25 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@feathersjs/adapter-commons": "^4.0.0-pre.4",
-    "@feathersjs/commons": "^4.0.0",
-    "@feathersjs/errors": "^4.0.0-pre.4"
+    "@feathersjs/adapter-commons": "^4.3.0",
+    "@feathersjs/commons": "^4.3.0",
+    "@feathersjs/errors": "^4.3.0"
   },
   "devDependencies": {
-    "@feathersjs/adapter-tests": "^4.0.0-pre.4",
-    "@feathersjs/express": "^4.0.0-pre.4",
-    "@feathersjs/feathers": "^4.0.0-pre.4",
+    "@feathersjs/adapter-tests": "^4.3.0",
+    "@feathersjs/express": "^4.3.0",
+    "@feathersjs/feathers": "^4.3.0",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
-    "dtslint": "^0.9.0",
+    "dtslint": "^0.9.6",
     "feathers-service-tests": "^0.10.2",
     "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^6.1.4",
-    "mysql2": "^1.6.5",
-    "pg": "^7.11.0",
+    "mocha": "^6.2.0",
+    "mysql2": "^1.7.0",
+    "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "semistandard": "^14.0.1",
-    "sequelize": "^5.9.4",
-    "sqlite3": "^4.0.9"
+    "semistandard": "^14.1.0",
+    "sequelize": "^5.18.1",
+    "sqlite3": "^4.1.0"
   }
 }
