--- a/package.json
+++ b/package.json
@@ -59,14 +59,14 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@feathersjs/adapter-commons": "^4.5.11",
-    "@feathersjs/commons": "^4.5.11",
-    "@feathersjs/errors": "^4.5.11"
+    "@feathersjs/adapter-commons": "^5.0.0-pre.3",
+    "@feathersjs/commons": "^5.0.0-pre.3",
+    "@feathersjs/errors": "^5.0.0-pre.3"
   },
   "devDependencies": {
-    "@feathersjs/adapter-tests": "^4.5.11",
-    "@feathersjs/express": "^4.5.11",
-    "@feathersjs/feathers": "^4.5.11",
+    "@feathersjs/adapter-tests": "^5.0.0-pre.3",
+    "@feathersjs/express": "^5.0.0-pre.3",
+    "@feathersjs/feathers": "^5.0.0-pre.3",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "dtslint": "^4.0.6",
