--- a/package.json
+++ b/package.json
@@ -32,23 +32,29 @@
     "url": "https://github.com/feathersjs-ecosystem/feathers-sequelize/issues"
   },
   "engines": {
-    "node": ">= 6"
+    "node": ">= 12"
   },
+  "files": [
+    "CHANGELOG.md",
+    "LICENSE",
+    "README.md",
+    "lib/**",
+    "types/**",
+    "*.d.ts",
+    "*.js"
+  ],
   "scripts": {
     "publish": "git push origin --tags && npm run changelog && git push origin",
     "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
+    "update-dependencies": "ncu -u",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
     "lint": "semistandard --fix",
-    "mocha": "mocha --opts mocha.opts --timeout 5000",
+    "mocha": "mocha --timeout 10000 --recursive test/ --exit",
     "dtslint": "dtslint types",
     "test": "npm run lint && npm run dtslint && npm run coverage",
-    "test:postgres": "env DB=postgres npm run lint && npm run coverage:postgres",
-    "test:mysql": "env DB=mysql npm run lint && npm run coverage:mysql",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha",
-    "coverage:postgres": "env DB=postgres istanbul cover node_modules/mocha/bin/_mocha",
-    "coverage:mysql": "env DB=mysql istanbul cover node_modules/mocha/bin/_mocha"
+    "coverage": "nyc npm run mocha"
   },
   "semistandard": {
     "env": [
@@ -68,17 +74,17 @@
     "@feathersjs/express": "^4.5.11",
     "@feathersjs/feathers": "^4.5.11",
     "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "dtslint": "^4.0.6",
-    "feathers-service-tests": "^0.10.2",
-    "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^8.2.1",
-    "mysql2": "^2.2.5",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "semistandard": "^16.0.0",
-    "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.0",
-    "typescript": "^4.1.2"
+    "chai": "^4.3.4",
+    "dtslint": "^4.1.6",
+    "mocha": "^9.1.2",
+    "mysql2": "^2.3.0",
+    "npm-check-updates": "^11.8.5",
+    "nyc": "^15.1.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "semistandard": "^16.0.1",
+    "sequelize": "^6.6.5",
+    "sqlite3": "^5.0.2",
+    "typescript": "^4.4.3"
   }
 }
