--- a/package.json
+++ b/package.json
@@ -66,26 +66,26 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@feathersjs/adapter-commons": "^5.0.0-pre.9",
-    "@feathersjs/commons": "^5.0.0-pre.9",
-    "@feathersjs/errors": "^5.0.0-pre.9"
+    "@feathersjs/adapter-commons": "^5.0.0-pre.16",
+    "@feathersjs/commons": "^5.0.0-pre.16",
+    "@feathersjs/errors": "^5.0.0-pre.16"
   },
   "devDependencies": {
-    "@feathersjs/adapter-tests": "^5.0.0-pre.9",
-    "@feathersjs/express": "^5.0.0-pre.9",
-    "@feathersjs/feathers": "^5.0.0-pre.9",
-    "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "dtslint": "^4.0.6",
-    "feathers-service-tests": "^0.10.2",
-    "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^8.2.1",
-    "mysql2": "^2.2.5",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "semistandard": "^16.0.0",
-    "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.0",
-    "typescript": "^4.1.2"
+    "@feathersjs/adapter-tests": "^5.0.0-pre.16",
+    "@feathersjs/express": "^5.0.0-pre.16",
+    "@feathersjs/feathers": "^5.0.0-pre.16",
+    "body-parser": "^1.19.1",
+    "chai": "^4.3.6",
+    "dtslint": "^4.2.1",
+    "mocha": "^9.2.0",
+    "mysql2": "^2.3.3",
+    "npm-check-updates": "^12.2.1",
+    "nyc": "^15.1.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "semistandard": "^16.0.1",
+    "sequelize": "^6.15.0",
+    "sqlite3": "^5.0.2",
+    "typescript": "^4.5.5"
   }
 }
