--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "6.3.4",
   "homepage": "https://github.com/feathersjs-ecosystem/feathers-sequelize",
   "main": "lib/",
-  "types": "types",
+  "types": "lib/",
   "keywords": [
     "feathers",
     "feathers-plugin",
@@ -45,22 +45,18 @@
     "*.js"
   ],
   "scripts": {
+    "prepublish": "npm run compile",
+    "compile": "shx rm -rf lib/ && tsc",
     "publish": "git push origin --tags && npm run changelog && git push origin",
     "changelog": "github_changelog_generator -u feathersjs-ecosystem -p feathers-sequelize && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
     "update-dependencies": "ncu -u",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "lint": "semistandard --fix",
-    "mocha": "mocha --timeout 10000 --recursive test/ --exit",
-    "dtslint": "dtslint types",
-    "test": "npm run lint && npm run dtslint && npm run coverage",
-    "coverage": "nyc npm run mocha"
-  },
-  "semistandard": {
-    "env": [
-      "mocha"
-    ]
+    "lint": "eslint src/**/*.ts test/**/*.ts --fix",
+    "mocha": "mocha --require ts-node/register",
+    "test": "npm run lint && npm run coverage",
+    "coverage": "c8 npm run mocha"
   },
   "directories": {
     "lib": "lib"
@@ -74,18 +70,26 @@
     "@feathersjs/adapter-tests": "^4.5.15",
     "@feathersjs/express": "^4.5.15",
     "@feathersjs/feathers": "^4.5.15",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.6.3",
+    "@types/pg": "^8.6.5",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "body-parser": "^1.20.0",
+    "c8": "^7.12.0",
     "chai": "^4.3.6",
-    "dtslint": "^4.2.1",
+    "eslint": "^7.32.0",
     "mocha": "^10.0.0",
     "mysql2": "^2.3.3",
-    "npm-check-updates": "^15.0.1",
-    "nyc": "^15.1.0",
+    "npm-check-updates": "^16.0.5",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "semistandard": "^16.0.1",
-    "sequelize": "^6.21.2",
-    "sqlite3": "^5.0.8",
+    "sequelize": "^6.21.3",
+    "shx": "^0.3.4",
+    "sqlite3": "^5.0.11",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
