--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mariadb",
     "postgres",
     "pg",
-    "mssql"
+    "mssql",
+    "database"
   ],
   "license": "MIT",
   "repository": {
@@ -32,7 +33,7 @@
     "url": "https://github.com/feathersjs-ecosystem/feathers-sequelize/issues"
   },
   "engines": {
-    "node": ">= 12"
+    "node": ">= 14"
   },
   "files": [
     "CHANGELOG.md",
@@ -62,33 +63,33 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@feathersjs/adapter-commons": "^4.5.15",
-    "@feathersjs/commons": "^4.5.15",
-    "@feathersjs/errors": "^4.5.15"
+    "@feathersjs/adapter-commons": "^5.0.0-pre.29",
+    "@feathersjs/commons": "^5.0.0-pre.29",
+    "@feathersjs/errors": "^5.0.0-pre.29"
   },
   "devDependencies": {
-    "@feathersjs/adapter-tests": "^4.5.15",
-    "@feathersjs/express": "^4.5.15",
-    "@feathersjs/feathers": "^4.5.15",
-    "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.6.3",
+    "@feathersjs/adapter-tests": "^5.0.0-pre.29",
+    "@feathersjs/express": "^5.0.0-pre.29",
+    "@feathersjs/feathers": "^5.0.0-pre.29",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.7.23",
     "@types/pg": "^8.6.5",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "body-parser": "^1.20.0",
     "c8": "^7.12.0",
     "chai": "^4.3.6",
-    "eslint": "^8.21.0",
+    "eslint": "^8.24.0",
     "mocha": "^10.0.0",
     "mysql2": "^2.3.3",
-    "npm-check-updates": "^16.0.5",
-    "pg": "^8.7.3",
+    "npm-check-updates": "^16.3.4",
+    "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.3",
+    "sequelize": "^6.23.2",
     "shx": "^0.3.4",
-    "sqlite3": "^5.0.11",
+    "sqlite3": "^5.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   }
 }
