--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:10.8
+        image: postgres:12.12
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
@@ -21,7 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 16.x]
+        node-version: [14.x, 16.x, 18.x]
         database: ['sqlite', 'postgres']
 
     steps:
