--- a/package.json
+++ b/package.json
@@ -61,33 +61,33 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@feathersjs/adapter-commons": "^5.0.0-pre.34",
-    "@feathersjs/commons": "^5.0.0-pre.34",
-    "@feathersjs/errors": "^5.0.0-pre.34"
+    "@feathersjs/adapter-commons": "^5.0.0",
+    "@feathersjs/commons": "^5.0.0",
+    "@feathersjs/errors": "^5.0.0"
   },
   "devDependencies": {
-    "@feathersjs/adapter-tests": "^5.0.0-pre.34",
-    "@feathersjs/express": "^5.0.0-pre.34",
-    "@feathersjs/feathers": "^5.0.0-pre.34",
+    "@feathersjs/adapter-tests": "^5.0.0",
+    "@feathersjs/express": "^5.0.0",
+    "@feathersjs/feathers": "^5.0.0",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.14.1",
     "@types/pg": "^8.6.6",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "body-parser": "^1.20.1",
-    "c8": "^7.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "body-parser": "^1.20.2",
+    "c8": "^7.13.0",
     "chai": "^4.3.7",
-    "eslint": "^8.31.0",
+    "eslint": "^8.34.0",
     "mocha": "^10.2.0",
-    "mysql2": "^2.3.3",
-    "npm-check-updates": "^16.6.2",
-    "pg": "^8.8.0",
+    "mysql2": "^3.1.2",
+    "npm-check-updates": "^16.7.9",
+    "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0",
+    "sequelize": "^6.29.0",
     "shx": "^0.3.4",
     "sqlite3": "^5.1.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   }
 }
