--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "feathers-sequelize",
   "description": "A service adapter for Sequelize an SQL ORM",
-  "version": "6.4.0",
+  "version": "7.0.0-pre.1",
   "homepage": "https://github.com/feathersjs-ecosystem/feathers-sequelize",
   "main": "lib/",
-  "types": "types",
+  "types": "lib/",
   "keywords": [
     "feathers",
     "feathers-plugin",
@@ -15,7 +15,8 @@
     "mariadb",
     "postgres",
     "pg",
-    "mssql"
+    "mssql",
+    "database"
   ],
   "license": "MIT",
   "repository": {
@@ -32,60 +33,61 @@
     "url": "https://github.com/feathersjs-ecosystem/feathers-sequelize/issues"
   },
   "engines": {
-    "node": ">= 12"
+    "node": ">= 14"
   },
   "files": [
     "CHANGELOG.md",
     "LICENSE",
     "README.md",
-    "lib/**",
-    "hooks/**",
-    "types/**",
-    "*.d.ts",
-    "*.js"
+    "src/**",
+    "lib/**"
   ],
   "scripts": {
+    "prepublishOnly": "npm run compile",
+    "compile": "shx rm -rf lib/ && tsc",
     "publish": "git push origin --tags && npm run changelog && git push origin",
     "changelog": "github_changelog_generator -u feathersjs-ecosystem -p feathers-sequelize && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
     "update-dependencies": "ncu -u",
+    "release:prerelease": "npm version prerelease --preid pre && npm publish --tag pre",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "lint": "semistandard --fix",
-    "mocha": "mocha --timeout 10000 --recursive test/ --exit",
-    "dtslint": "dtslint types",
-    "test": "npm run lint && npm run dtslint && npm run coverage",
-    "coverage": "nyc npm run mocha"
-  },
-  "semistandard": {
-    "env": [
-      "mocha"
-    ]
+    "lint": "eslint src/**/*.ts test/**/*.ts --fix",
+    "mocha": "mocha --require ts-node/register",
+    "test": "npm run lint && npm run coverage",
+    "coverage": "c8 npm run mocha"
   },
   "directories": {
     "lib": "lib"
   },
   "dependencies": {
-    "@feathersjs/adapter-commons": "^4.5.15",
-    "@feathersjs/commons": "^4.5.15",
-    "@feathersjs/errors": "^4.5.15"
+    "@feathersjs/adapter-commons": "^5.0.0",
+    "@feathersjs/commons": "^5.0.0",
+    "@feathersjs/errors": "^5.0.0"
   },
   "devDependencies": {
-    "@feathersjs/adapter-tests": "^4.5.15",
-    "@feathersjs/express": "^4.5.15",
-    "@feathersjs/feathers": "^4.5.15",
-    "body-parser": "^1.20.1",
-    "chai": "^4.3.6",
-    "dtslint": "^4.2.1",
-    "mocha": "^10.1.0",
-    "mysql2": "^2.3.3",
-    "npm-check-updates": "^16.3.16",
-    "nyc": "^15.1.0",
-    "pg": "^8.8.0",
+    "@feathersjs/adapter-tests": "^5.0.0",
+    "@feathersjs/express": "^5.0.0",
+    "@feathersjs/feathers": "^5.0.0",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.14.1",
+    "@types/pg": "^8.6.6",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "body-parser": "^1.20.2",
+    "c8": "^7.13.0",
+    "chai": "^4.3.7",
+    "eslint": "^8.34.0",
+    "mocha": "^10.2.0",
+    "mysql2": "^3.1.2",
+    "npm-check-updates": "^16.7.9",
+    "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
-    "semistandard": "^16.0.1",
-    "sequelize": "^6.25.3",
-    "sqlite3": "^5.1.2",
-    "typescript": "^4.8.4"
+    "sequelize": "^6.29.0",
+    "shx": "^0.3.4",
+    "sqlite3": "^5.1.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
