--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "description": "A service adapter for Sequelize an SQL ORM",
   "version": "8.0.0-pre.2",
   "homepage": "https://github.com/feathersjs-ecosystem/feathers-sequelize",
-  "main": "lib/",
-  "types": "lib/",
   "keywords": [
     "feathers",
     "feathers-plugin",
@@ -32,8 +30,19 @@
   "bugs": {
     "url": "https://github.com/feathersjs-ecosystem/feathers-sequelize/issues"
   },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "type": "module",
   "engines": {
-    "node": ">= 14"
+    "node": ">= 20"
   },
   "files": [
     "CHANGELOG.md",
@@ -44,7 +53,7 @@
   ],
   "scripts": {
     "prepublishOnly": "npm run compile",
-    "compile": "shx rm -rf lib/ && tsc",
+    "compile": "unbuild",
     "publish": "git push origin --tags && npm run changelog && git push origin",
     "changelog": "github_changelog_generator -u feathersjs-ecosystem -p feathers-sequelize && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
     "update-dependencies": "ncu -u",
@@ -52,42 +61,42 @@
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "lint": "eslint src/**/*.ts test/**/*.ts --fix",
-    "mocha": "mocha --require ts-node/register",
-    "test": "npm run lint && npm run coverage",
+    "lint": "eslint",
+    "test": "mocha",
     "coverage": "c8 npm run mocha"
   },
-  "directories": {
-    "lib": "lib"
-  },
   "dependencies": {
-    "@feathersjs/adapter-commons": "^5.0.25",
-    "@feathersjs/commons": "^5.0.25",
-    "@feathersjs/errors": "^5.0.25"
+    "@feathersjs/adapter-commons": "^5.0.33",
+    "@feathersjs/commons": "^5.0.33",
+    "@feathersjs/errors": "^5.0.33"
   },
   "devDependencies": {
-    "@feathersjs/adapter-tests": "^5.0.25",
-    "@feathersjs/express": "^5.0.25",
-    "@feathersjs/feathers": "^5.0.25",
-    "@types/chai": "^4.3.16",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.12.11",
-    "@types/pg": "^8.11.6",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "body-parser": "^1.20.2",
-    "c8": "^8.0.1",
-    "chai": "^4.3.10",
-    "eslint": "^8.52.0",
-    "mocha": "^10.4.0",
-    "mysql2": "^3.9.7",
-    "npm-check-updates": "^16.14.20",
-    "pg": "^8.11.5",
+    "@feathers-community/eslint-config": "^0.0.5",
+    "@feathersjs/adapter-tests": "^5.0.33",
+    "@feathersjs/feathers": "^5.0.33",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/chai": "^5.2.0",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.13.10",
+    "@types/pg": "^8.11.11",
+    "c8": "^10.1.3",
+    "chai": "^5.2.0",
+    "eslint": "^9.22.0",
+    "mariadb": "^3.4.0",
+    "mocha": "^11.1.0",
+    "mysql2": "^3.13.0",
+    "npm-check-updates": "^17.1.15",
+    "pg": "^8.14.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3",
+    "sequelize": "^6.37.6",
     "shx": "^0.3.4",
     "sqlite3": "^5.1.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
+    "unbuild": "^3.5.0"
+  },
+  "peerDependencies": {
+    "@feathersjs/feathers": "^5.0.0",
+    "sequelize": "^6.0.0"
   }
 }
