ci: fix build script

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -147,6 +147,6 @@ jobs:
         with:
           node-version: 22.x
       - run: npm install
-      - run: npm run build
+      - run: npm run compile
         env:
           CI: true
