--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,19 +2,6 @@ name: CI
 
 on: [push, pull_request]
 
-env:
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: password
-  POSTGRES_DB: sequelize
-
-  MYSQL_USER: sequelize
-  MYSQL_DATABASE: sequelize
-  MYSQL_PASSWORD: password
-
-  MARIADB_USER: sequelize
-  MARIADB_DATABASE: sequelize
-  MARIADB_PASSWORD: password
-
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -58,9 +45,9 @@ jobs:
       postgres:
         image: postgres:${{ matrix.postgres-version }}
         env:
-          POSTGRES_USER: ${{ env.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
-          POSTGRES_DB: ${{ env.POSTGRES_DB }}
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: sequelize
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -88,10 +75,10 @@ jobs:
       mysql:
         image: mysql:${{ matrix.mysql-version }}
         env:
-          MYSQL_DATABASE: ${{ env.MYSQL_DATABASE }}
-          MYSQL_ROOT_PASSWORD: ${{ env.MYSQL_PASSWORD }}
-          MYSQL_USER: ${{ env.MYSQL_USER }}
-          MYSQL_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+          MYSQL_DATABASE: sequelize
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_USER: sequelize
+          MYSQL_PASSWORD: password
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries 5
@@ -119,13 +106,13 @@ jobs:
       mariadb:
         image: mariadb:${{ matrix.mariadb-version }}
         env:
-          MARIADB_DATABASE: ${{ env.MARIADB_DATABASE }}
-          MARIADB_ROOT_PASSWORD: ${{ env.MARIADB_PASSWORD }}
-          MARIADB_USER: ${{ env.MARIADB_USER }}
-          MARIADB_PASSWORD: ${{ env.MARIADB_PASSWORD }}
+          MARIADB_DATABASE: sequelize
+          MARIADB_ROOT_PASSWORD: root_password
+          MARIADB_USER: sequelize
+          MARIADB_PASSWORD: password
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries 5
+        options: --health-cmd="healthcheck.sh --connect --innodb_initialized" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - uses: actions/checkout@v3
